@@ -20,6 +20,7 @@ PHP                                                                        NEWS
   . Fix manually calling __construct() on DOM classes. (nielsdos)
   . Fixed bug GH-11830 (ParentNode methods should perform their checks
     upfront). (nielsdos)
+  . Fix viable next sibling search for replaceWith. (nielsdos)
 
 - FFI:
   . Fix leaking definitions when using FFI::cdef()->new(...). (ilutov)
